--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Harvey Dale and the Cements</title>
@@ -10,6 +11,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="shows.html">Shows</a></li>
+          <li><a href="bios.html">Bios</a></li>
         </ul>
       </div>
       <div class="content">
